--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,11 @@
-*{
-  background: black;
-  color: white;
+* {
+  background: bisque;
+  color: black;
 }
+
 .App {
   text-align: center;
-  background-color: black;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  background-color: bisque;
 }
 
 .App-header {
@@ -33,15 +23,6 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-#c1{
+#c1 {
   background: none;
 }
