--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,12 @@
   color: white;
 }
 
+.Loading-spinner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .App-link {
   color: #61dafb;
 }
