bootstrap.css required to display spinner, body bg color match

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+:root {
+  --bs-body-bg: bisque;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
