added some styling

--- a/src/App.css
+++ b/src/App.css
@@ -32,3 +32,27 @@
 #c1 {
   background: none;
 }
+
+.result {
+  font-family: Garamond;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: bold;
+  color: #000000;
+  text-decoration: none;
+  text-transform: none;
+}
+
+.winner-result {
+  display: inline;
+  color: darkblue;
+  font-family: Garamond;
+  font-size: 48px;
+  font-style: normal;
+  font-weight: 700;
+  text-decoration: none;
+  text-transform: uppercase;
+  border-width: 10px;
+  border-style: outset;
+  border-color: brown;
+  }
