--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,30 @@
+
+
 body {
   min-height: 100vh;
   background: white;
+}
+.customcard{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+}
+.container{
+  width: 375px;
+  margin: 0;
+  padding: 0;
+}
+.cardstat{
+  position: relative;
+  bottom: 0;
+  top: -50px;
+  left: -130px;
+  right: 0;
+  margin: 0;
+  color: white;
+  font-size: 20px;
 }
