--- a/src/Pages/Battle.css
+++ b/src/Pages/Battle.css
@@ -3,6 +3,12 @@
   text-align: center;
   background-color: bisque;
 }
+@font-face {
+  font-family: 'Belwe';
+  src: local('MyFont'), url(../fonts/BelweBold.otf) format('opentype');
+  /* other formats include: 'woff2', 'truetype, 'opentype',
+                            'embedded-opentype', and 'svg' */
+}
 
 .Loading-spinner {
   display: flex;
@@ -38,4 +44,63 @@
   border-width: 10px;
   border-style: outset;
   border-color: brown;
+}
+#imgs{
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+}
+.img{
+  width: 375px;
+  height: 522px;
+}
+.customcard{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  justify-content: center;
+  align-items: center;
+}
+.container{
+  width: 375px;
+  height: 522px;
+  margin: 0;
+  padding: 0;
+  
+}
+.inputs{
+  display: flex;
+  flex-direction: row;
+}
+.attackinput{
+  font-family: Belwe;
+  position: relative;
+  bottom: 0;
+  top: -108px;
+  left: 14px;
+  right: 0;
+  margin: 0;
+  color: white;
+  font-size: 80px;
+  text-align: center;
+  width: 80px;
+  -webkit-text-stroke: 2px black;
+}
+.healthinput{
+  font-family: Belwe;
+  position: relative;
+  bottom: 0;
+  top: -108px;
+  left: 190px;
+  right: 0;
+  margin: 0;
+  color: white;
+  font-size: 80px;
+  text-align: center;
+  width: 80px;
+  -webkit-text-stroke: 2px black;
 }
