--- a/src/Pages/Battle.css
+++ b/src/Pages/Battle.css
@@ -10,13 +10,6 @@
                             'embedded-opentype', and 'svg' */
 }
 
-.Loading-spinner {
-  display: flex;
-  height: 100vh;
-  background-color: bisque;
-  flex-direction: column;
-  align-items: center;
-}
 
 #c1 {
   background: none;
@@ -103,4 +96,14 @@
   text-align: center;
   width: 80px;
   -webkit-text-stroke: 2px black;
+}
+
+.Loading-spinner {
+  display: flex;
+  height: 100vh;
+  background-color: bisque;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
