--- a/src/Pages/Battle.css
+++ b/src/Pages/Battle.css
@@ -43,7 +43,7 @@
   text-transform: uppercase;
   border-width: 10px;
   border-style: outset;
-  border-color: brown;
+  border-color: rgb(252, 146, 7);
 }
 #imgs{
   display: flex;
@@ -103,4 +103,25 @@
   text-align: center;
   width: 80px;
   -webkit-text-stroke: 2px black;
+}
+
+html {
+  background-color: bisque;
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.card-container {
+  display: flex;
+  flex-direction: row;
+  padding-top: 40px;
+}
+
+.attack-text {
+  padding-left: 600px;
 }
