--- a/src/Pages/Battle.css
+++ b/src/Pages/Battle.css
@@ -107,3 +107,10 @@
   justify-content: center;
   width: 100%;
 }
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
