--- a/src/Pages/Battle.css
+++ b/src/Pages/Battle.css
@@ -1,7 +1,7 @@
 .Battle {
   height: 100vh;
   text-align: center;
-  background-color: bisque;
+  background-color: #fdf1e6;
   padding-top: 20px;
 }
 
