--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 .Navbar {
-    height: 80px;
+    height: 10vh;
     position: relative;
     display: flex;
     align-items: center;
@@ -49,10 +49,15 @@ ul.NavLinks {
     padding-left: 0;
 }
 
+.Logo:hover {
+    background-color: unset !important;
+}
+
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    scroll-behavior: smooth;
 }
 
 code {
