adjusted background color

--- a/src/Pages/Landing.css
+++ b/src/Pages/Landing.css
@@ -2,7 +2,7 @@
   display: flex;
   /*height: 100vh;*/
   flex-direction: column;
-  background-color: bisque;
+  background-color: #fdf1e6;
 }
 
 .TopLanding {
