--- a/src/index.css
+++ b/src/index.css
@@ -89,7 +89,8 @@ code {
     padding-top: 8px;
 }
 
-.submit-button {
+.submit-button,
+.login-button {
     background: rgb(7, 208, 235);
     border: solid 1px rgb(7, 208, 235);
     border-radius: 12px;
