--- a/src/Pages/Battle.css
+++ b/src/Pages/Battle.css
@@ -47,6 +47,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 30px;
+  margin-left: -20px;
 }
 
 .img {
@@ -142,7 +143,10 @@
   color: white;
   cursor: pointer;
   height: 30px;
-  width: 170px;
+  width: 180px;
+  margin-left: 5px;
+  padding: 5px;
+  text-align: center;
 }
 
 .battle-button {
@@ -175,7 +179,7 @@
   flex-direction: column;
 }
 
-.input-boxes {
+.input-boxes-user {
   border: 1px;
   border-radius: 8px;
   border-style: solid;
@@ -183,6 +187,20 @@
   font-size: 20px;
   height: 30px;
   border-color: lightgrey;
+  margin-left: -60px;
+  margin-top: 5px;
+}
+
+.input-boxes-opponent {
+  border: 1px;
+  border-radius: 8px;
+  border-style: solid;
+  width: 300px;
+  font-size: 20px;
+  height: 30px;
+  border-color: lightgrey;
+  margin-left: 260px;
+  margin-top: 5px;
 }
 
 .ca-input-boxes {
